--- a/frontend/src/assets/styles/tailwind.css
+++ b/frontend/src/assets/styles/tailwind.css
@@ -1524,6 +1524,10 @@ select {
   height: 5rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .h-auto {
   height: auto;
 }
@@ -2077,6 +2081,10 @@ select {
   padding-left: 1rem;
 }
 
+.pl-8 {
+  padding-left: 2rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -2511,6 +2519,14 @@ select {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-auto {
